--- a/Example3/Cadenas/Exercises/Exercise1/index.html
+++ b/Example3/Cadenas/Exercises/Exercise1/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo JavaScript</title>
-    <script src="./script.js">
-        console.log("hola mundo")
-    </script>
+    <title>Ejercicio 1</title>
+    <script src="./script.js"></script>
 </head>
 <body>
-    <h1>Ejemplo JavaScript</h1>
+    <h1>Ejercicio 1</h1>
 </body>
 </html>
