feat: :sparkles: Agregado 1 ejercicio del ejemplo 6
Agregado 1 ejercicio que falto de el ejemplo 6.

by @JavierEAcevedoN

--- a/Example6/Exercises/Exercise6/index.html
+++ b/Example6/Exercises/Exercise6/index.html
@@ -7,6 +7,6 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    <h1>Find() ejercicio</h1>
+    <h1>FindIndex() ejercicio</h1>
 </body>
 </html>
