feat: :sparkles: Agregando los estilos del ejemplo 11
Agregado la decoracion y los estilos del ejemplo 11.

by @JavierEAcevedoN

--- a/Exemple11/index.html
+++ b/Exemple11/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="con_peliculas" id="con_peliculas">
-
+            <!-- Aqui van las peliculas que se van a cargar de la API -->
         </div>
         <div class="botones">
             <button id="boton-anterior">Anterior</button>
